--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_scrollFlags="scroll|enterAlways" />
+
+    </android.support.design.widget.AppBarLayout>
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navBar"
         android:layout_width="wrap_content"
@@ -17,5 +33,33 @@
         app:itemTextColor="#F2F2F2"
         app:menu="@menu/main_menu"
         app:headerLayout="@layout/header"></com.google.android.material.navigation.NavigationView>
+
+
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical">
+
+       <TextView
+           android:id="@+id/rootText"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Evally"
+           android:textSize="40sp"
+           android:textStyle="bold"
+           android:layout_marginTop="5dp"
+           android:layout_marginLeft="170dp"
+           />
+       <androidx.core.widget.NestedScrollView
+           android:layout_width="wrap_content"
+           android:layout_margin="10dp"
+           android:layout_height="match_parent">
+           <TextView
+               android:text="@string/testScroll"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"/>
+       </androidx.core.widget.NestedScrollView>
+   </LinearLayout>
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
