--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:layout_scrollFlags="scroll|enterAlways" />
-
-    </android.support.design.widget.AppBarLayout>
-
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navBar"
         android:layout_width="wrap_content"
@@ -33,6 +17,17 @@
         app:itemTextColor="#F2F2F2"
         app:menu="@menu/main_menu"
         app:headerLayout="@layout/header"></com.google.android.material.navigation.NavigationView>
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tool"
+        android:layout_width="10dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="630dp"
+        android:background="#5917CE"
+        android:theme="?attr/actionBarTheme"
+        />
+
+
 
 
    <LinearLayout
@@ -46,9 +41,9 @@
            android:layout_height="wrap_content"
            android:text="Evally"
            android:textSize="40sp"
+           android:layout_gravity="center"
            android:textStyle="bold"
-           android:layout_marginTop="5dp"
-           android:layout_marginLeft="170dp"
+
            />
        <androidx.core.widget.NestedScrollView
            android:layout_width="wrap_content"
