--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,10 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:backgroundTint="#673AB7"
+        app:headerLayout="@layout/header"
         app:itemIconTint="#8BC34A"
         app:itemTextColor="#F2F2F2"
-        app:menu="@menu/main_menu"
-        app:headerLayout="@layout/header"></com.google.android.material.navigation.NavigationView>
+        app:menu="@menu/main_menu"></com.google.android.material.navigation.NavigationView>
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tool"
@@ -24,42 +24,54 @@
         android:layout_height="40dp"
         android:layout_marginBottom="630dp"
         android:background="#5917CE"
-        android:theme="?attr/actionBarTheme"
-        />
+        android:theme="?attr/actionBarTheme" />
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/rootText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+
+            android:text="Evally"
+            android:textSize="40sp"
+            android:textStyle="bold"
+
+            />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp">
+
+            <androidx.core.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal">
 
 
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-       <TextView
-           android:id="@+id/rootText"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="Evally"
-           android:textSize="40sp"
-           android:layout_gravity="center"
-           android:textStyle="bold"
+                    <include layout="@layout/horizontal_tab"/>
 
-           />
-       <androidx.core.widget.NestedScrollView
-           android:layout_width="wrap_content"
-           android:layout_margin="10dp"
-           android:layout_height="match_parent">
-
-           <include
-
-               layout="@layout/horizontal_tab"
-               />
+                    <include layout="@layout/tabs"
+                        />
+                </LinearLayout>
 
 
+            </androidx.core.widget.NestedScrollView>
 
+        </RelativeLayout>
 
-       </androidx.core.widget.NestedScrollView>
-   </LinearLayout>
+    </LinearLayout>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
